Correção de bugs. Falta apenas o C do CRUD

--- a/restaurante/src/main/resources/templates/produtos/formulario.html
+++ b/restaurante/src/main/resources/templates/produtos/formulario.html
@@ -12,20 +12,24 @@
     <div>
         <h1>Formulario para adicionar um prato</h1>
         <label>
+            <span>ID</span>
+            <input type="hidden" name="id" th:value="${produto?.id}" />
+        </label>
+        <label>
             <span>Nome do prato</span>
-            <input type="text" name="name"/>
+            <input type="text" name="name" th:value="${produto?.name}"/>
         </label>
         <label>
             <span>Descrição do prato</span>
-            <input type="text" name="description"/>
+            <input type="text" name="description" th:value="${produto?.description}"/>
         </label>
         <label>
             <span>Preço</span>
-            <input type="number" step="0.01" name="price"/>
+            <input type="number" step="0.01" name="price" th:value="${produto?.price}"/>
         </label>
         <label>
             <span>Status</span>
-            <input type="checkbox" name="active" value="true"/>
+            <input type="checkbox" name="active" value="true" th:value="${produto?.active}"/>
         </label>
         <button type="submit">Salvar Prato</button>
     </div>
